2000-10-18  Daniel Egger  <egger@suse.de>

	* app/resize.c: Add a patch from 
	Tino Schwarze <tino.schwarze@informatik.tu-chemnitz.de>
	to add a reset button to the image resize dialog.

2000-10-18  Sven Neumann  <sven@gimp.org>

	* app/cursorutil.c (gtkutil_compress_motion): as Mitch pointed out we
	used to leak GList memory here. The new implementation should be 
	faster too, since it prepends to the list instead of appending.

2000-10-18  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/Makefile.am: added $GTK_CFLAGS and $GTK_LIBS.
	Closes #28491.

2000-10-18  Sven Neumann  <sven@gimp.org>

	* gimp.m4: as Garrick James correctly pointed out, GPlugInInfo was
	changed to GimpPlugInInfo with version 1.1.24, not 1.1.20.

2000-10-17  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.c: gimp_uninstall_temp_proc(): free the original
	hash key _after_ removing the procedure from the hash table.

	I didn't observe any crash from this bug, but as the function
	is called *only* from

	- plug-ins/perl/Gimp/Lib.c and
	- plug-ins/script-fu/script-fu-scripts.c

	it may have been the reason for various reported perl<->script-fu
	problems. Bug reporters, please check your bugs.

x2000-10-17  Sven Neumann  <sven@gimp.org>

	* app/paint_funcs.c
	* app/pixel_processor.c
	* plug-ins/common/pix.c
	* plug-ins/gap/gap_pdb_calls.c
	* plug-ins/gdyntext/message_window.c
	* plug-ins/xjt/xjpeg.c: removed compiler warnings

2000-10-17  Tor Lillqvist  <tml@iki.fi>

	* app/makefile.mingw.in (gimp_OBJECTS): Add
	resolution_calibrate.o.

	* app/user_install.c (user_install_run): Add missing semicolon.

	* tips/makefile.mingw (install): Copy gimp_tips.txt separately. We
	used to get gimp_tips.txt.txt because of `basename $f .utf8`.

Tue Oct 17 03:55:44 CEST 2000  Marc Lehmann <pcg@goof.com>
	Applied patch by Robert L Krawitz <rlk@alum.mit.edu>.

        * gimp.m4: Don't barf if an old version of gimptool is used
        that doesn't support GIMP_DATA_DIR and GIMP_PLUGIN_DIR and